--- a/2.编辑团队.md
+++ b/2.编辑团队.md
@@ -19,3 +19,8 @@
 >Mastering Digital Forensics with Kali Linux, Massimiliano Sembiante,Packt Publishing
 
 **Ahmad Muammar WK**是一名独立的IT安全顾问和渗透测试工程师。他从事信息安全工作已超过10年。他拥有与OSCP和OSCE认证。他是[ECHO](http://echo.or.id/)的创始人之一，也是在印尼最古老的计算机安全社区成员，也是印度尼西亚年度最大安全会议[IDSECCONF](http://idsecconf.org/)的创始人之一。他在印度尼西亚的计算机安全社区中很出名。你可以通过电子邮件联系他：[y3dips@echo.or.id](mailto:y3dips@echo.or.id)，也可以在Twitter上关注他[@y3dips](https://twitter.com/y3dips)。
+
+## links
+  * [目录](<preface.md>)
+  * 上一节: [序](<1.序.md>)
+  * 下一节: [开始](<3.开始.md>)
